--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <div class="quiz-container">
     <h1>Quiz Johnny</h1>
     <div id="question-container">
-      <p id="phrase"></p>
+      <em><p id="phrase" style="font-style: italic;"></p></em>
       <div class="options">
         <button id="option1" onclick="checkAnswer('option1')"></button>
         <button id="option2" onclick="checkAnswer('option2')"></button>
